--- a/Qt/GUI/ConsoleUnfoldingGUI/CalibrationWizard.ui
+++ b/Qt/GUI/ConsoleUnfoldingGUI/CalibrationWizard.ui
@@ -24,8 +24,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>900</width>
-    <height>600</height>
+    <width>524287</width>
+    <height>524287</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -523,7 +523,7 @@ p, li { white-space: pre-wrap; }
            <string notr="true">color:red</string>
           </property>
           <property name="text">
-           <string>Status</string>
+           <string/>
           </property>
          </widget>
         </item>
@@ -598,11 +598,21 @@ p, li { white-space: pre-wrap; }
       </item>
      </layout>
     </item>
+    <item>
+     <widget class="QLabel" name="labelBlobStatus2">
+      <property name="text">
+       <string/>
+      </property>
+      <property name="alignment">
+       <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+      </property>
+     </widget>
+    </item>
    </layout>
   </widget>
   <widget class="CustomWizardPage" name="wizPage3">
    <property name="title">
-    <string>Warping</string>
+    <string>Unfolding</string>
    </property>
    <layout class="QVBoxLayout" name="verticalLayout_9">
     <item>
@@ -656,7 +666,7 @@ p, li { white-space: pre-wrap; }
      </layout>
     </item>
     <item>
-     <widget class="QGroupBox" name="groupBox">
+     <widget class="QGroupBox" name="groupBoxWarpMethod">
       <property name="title">
        <string>Warping method</string>
       </property>
@@ -682,14 +692,17 @@ p, li { white-space: pre-wrap; }
      </widget>
     </item>
     <item>
-     <widget class="QGraphicsView" name="viewWarped">
-      <property name="sizePolicy">
-       <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-        <horstretch>0</horstretch>
-        <verstretch>0</verstretch>
-       </sizepolicy>
+     <spacer name="verticalSpacer_2">
+      <property name="orientation">
+       <enum>Qt::Vertical</enum>
       </property>
-     </widget>
+      <property name="sizeHint" stdset="0">
+       <size>
+        <width>20</width>
+        <height>40</height>
+       </size>
+      </property>
+     </spacer>
     </item>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout_11">
@@ -710,9 +723,19 @@ p, li { white-space: pre-wrap; }
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="pushButton_6">
+       <widget class="QPushButton" name="buttonExport">
+        <property name="enabled">
+         <bool>false</bool>
+        </property>
         <property name="text">
          <string>export Settings...</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="buttonUnfold">
+        <property name="text">
+         <string>unfold</string>
         </property>
        </widget>
       </item>
