--- a/Qt/GUI/ConsoleUnfoldingGUI/CalibrationWizard.ui
+++ b/Qt/GUI/ConsoleUnfoldingGUI/CalibrationWizard.ui
@@ -296,7 +296,7 @@ p, li { white-space: pre-wrap; }
       <property name="maximumSize">
        <size>
         <width>16777215</width>
-        <height>70</height>
+        <height>75</height>
        </size>
       </property>
       <property name="frameShape">
@@ -315,6 +315,7 @@ p, li { white-space: pre-wrap; }
 &lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:8.25pt; font-weight:400; font-style:normal;&quot;&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Please load calbration image for cone calibration (glued lateral surface). &lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;After detection, check if all black dots have been detected. &lt;span style=&quot; font-weight:600;&quot;&gt;Left click&lt;/span&gt; adds a marker, &lt;span style=&quot; font-weight:600;&quot;&gt;right click&lt;/span&gt; deletes.&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Make sure the background is mostly homogenous and there is enough distance to the cone&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Circle Samples&lt;/span&gt;: number of circles with black blobs on it&lt;/p&gt;
 &lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;Line Samples:&lt;/span&gt; number of lines on lateral surface with black blobs on it minus one or number of lines on glued lateral surface&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
       </property>
