--- a/Qt/GUI/ConsoleUnfoldingGUI/mainwindow.ui
+++ b/Qt/GUI/ConsoleUnfoldingGUI/mainwindow.ui
@@ -39,14 +39,7 @@
        <enum>QLayout::SetFixedSize</enum>
       </property>
       <item>
-       <widget class="QTreeView" name="treeView">
-        <property name="maximumSize">
-         <size>
-          <width>200</width>
-          <height>16777215</height>
-         </size>
-        </property>
-       </widget>
+       <widget class="QListView" name="listViewFiles"/>
       </item>
       <item>
        <widget class="QPushButton" name="ButtonLoadFiles">
@@ -69,7 +62,7 @@
        <number>0</number>
       </property>
       <item>
-       <widget class="QGraphicsView" name="graphicsView"/>
+       <widget class="QGraphicsView" name="viewUnfold"/>
       </item>
       <item>
        <layout class="QHBoxLayout" name="horizontalLayout_4">
